# UEC

./: .gitignore
term6/language/: minitest1.md
term_5/interactive_system/: No3.sce
term_5/interactive_system/1st/: No1.py  No1.sce  No2.py  No2.sce  No3.sce
term_5/interactive_system/2nd/: No1.sce
term_5/media_literacy/: guidance.md
term_5/prog_lang/: No2.c  a.out  hoge.c
term_5/prog_lang/No1/: No1_A.c  No1_B.c
term_5/prog_lang/No2/: No2.c  No2.c_baby
term_5/prog_lang/No3/: No3.c  No3.c~
term_5/prog_lang/No4/: No4.c
term_5/prog_lang/scheme/: ex1.scm  ex2.scm  ex3.scm  ex4.scm
term_5/prog_lang/uecda/tndhm_devkit_c-20180826/server/: .hg_archival.txt  INSTALL.txt  Makefile  README.txt  config.status  configure.ac  configure.scan
term_5/prog_lang/uecda/tndhm_devkit_c-20180826/server/src/: Makefile.am  Makefile.in  card_b.xpm  card_l.xpm  card_newn.xpm  card_s.xpm  config.h.in  daihu.c  external.c  external.h  logger.c  logger.h  mibun_l.xpm  mibun_m.xpm  mibun_newn.xpm  mibun_s.xpm  statistics.h  tefuda2_l.xpm  tefuda2_newn.xpm  tefuda_m.xpm  tefuda_me.xpm  tefuda_newn2.xpm  tn_protocol.c  tn_protocol.h  tndhms
term_5/prog_lang/uecda/tndhm_devkit_c-20180826/server/src/.deps/: daihu.Po  external.Po  tn_protocol.Po  xdaihu.Po
term_5/prog_lang/uecda/tndhm_devkit_c-20180826/server/src/rand/: Imakefile
term_5/prog_lang/uecda/tndhmc-0.03/: INSTALL.txt  README.txt  configure.ac
term_5/prog_lang/uecda/tndhmc-0.03/autom4te.cache/: requests  traces.0  traces.1
term_5/prog_lang/uecda/tndhmc-0.03/src/: .#daihinmin.h  .#select_cards.c  Makefile.in  client  client.c  common.c  common.c~  common.h  config.h  config.h.in  connection.h  daihinmin.c  daihinmin.c~  daihinmin.h  daihinmin.h~  select_cards.c  select_cards.c~
term_5/prog_lang/uecda/tndhmc-0.03/src/.deps/: client.Po  daihinmin.Po  select_cards.Po
term_6/CG/: ccgl  ex1.c  prog1.c  prog2.c  shape.c  shape.h
term_6/CG/final/: Makefile  draw.c  draw.h  keyboard.c  keyboard.h  list.c  list.h  main  main.c  shape.c  shape.h  texture.c  texture.h  vector.c  vector.h
term_6/language/: note.md
term_6/media2019/: annalyze.ipynb
term_6/media2019/docs/: additional.sty  report.tex
term_6/object/: ex1_5b.m  ex1_6.m  ex1_7.m
term_6/object/1st/: ex1_5a.m
term_6/object/2nd/: db.mat  im2hist64.m  im2x64.m  intersection.m  makeHistDB.m  search_sim.m  similarity.m
term_6/object/3rd/: ex5.m  my_siftmatch.m  sample3.m
term_6/object/4th/: NImg.mat  NImgPath.mat  PImg.mat  PImgPath.mat  bovmAll.mat  bovmN_sift.mat  bovmP.mat  bovmP_sift.mat  codebook.mat  db.mat  ex1.m  ex1_1.m  ex2.m  ex3.m  ex4.m  ex5.m  ex5_sift.m  ex6.m  ex6_2.m  im2x64.m  makeHistDB.m  my_kmeans.m  pathlist.mat
term_6/object/5th/: bovwN.mat  ex1.m  loadimpath.m  makeBoVM.m
term_6/object/final/: .#cross_validation.m
(+134 files in other folders)
